[gd_scene load_steps=13 format=2]

[ext_resource path="res://level1.gd" type="Script" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]
[ext_resource path="res://Assets/tileSet2.png" type="Texture" id=3]
[ext_resource path="res://tiles2.res" type="TileSet" id=4]
[ext_resource path="res://Snake1.gd" type="Script" id=5]
[ext_resource path="res://Assets/snake1.png" type="Texture" id=6]
[ext_resource path="res://EnemyCollisionCheck.gd" type="Script" id=7]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=8]
[ext_resource path="res://Assets/bird1.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 11.0
height = 5.0

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0
height = 5.0

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 16.0

[node name="level" type="Node" index="0"]

script = ExtResource( 1 )

[node name="cameraControl" type="Node2D" parent="." index="0"]

script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
furthestX = 0
winningSnake = "test"

[node name="Camera2D" type="Camera2D" parent="cameraControl" index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.2
drag_margin_right = 0.0
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Limit", "Offset", "Smoothing", "Transform" ]

[node name="Area2D" type="Area2D" parent="cameraControl" index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="cameraControl/Area2D" index="0"]

visible = false
build_mode = 1
polygon = PoolVector2Array( -508, -296, -508, 296, 508, 296, 508, -296 )

[node name="TopArea" type="Area2D" parent="cameraControl" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cameraControl/TopArea" index="0"]

build_mode = 0
polygon = PoolVector2Array( 512, -300, 536, -320, -528, -320, -512, -304 )

[node name="BotArea" type="Area2D" parent="cameraControl" index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cameraControl/BotArea" index="0"]

rotation = 3.14159
build_mode = 0
polygon = PoolVector2Array( 510, -300, 534, -320, -532, -320, -512, -300 )
_sections_unfolded = [ "Transform" ]

[node name="RightArea" type="Area2D" parent="cameraControl" index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cameraControl/RightArea" index="0"]

build_mode = 0
polygon = PoolVector2Array( 512, -296, 536, -316, 532, 316, 512, 296 )

[node name="LeftArea" type="Area2D" parent="cameraControl" index="5"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cameraControl/LeftArea" index="0"]

rotation = 3.14159
build_mode = 0
polygon = PoolVector2Array( 512, -300, 536, -320, 532, 320, 512, 300 )
_sections_unfolded = [ "Transform" ]

[node name="Fire1" type="Sprite" parent="cameraControl" index="6"]

position = Vector2( -2359.5, 4 )
scale = Vector2( 5.875, 19.5 )
z_index = 2
texture = ExtResource( 3 )
offset = Vector2( 500, 0 )
region_enabled = true
region_rect = Rect2( 341, 1, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Z Index" ]

[node name="Fire2" type="Sprite" parent="cameraControl" index="7"]

position = Vector2( 1270.5, 4.00002 )
scale = Vector2( 3.625, 19.25 )
z_index = 2
texture = ExtResource( 3 )
offset = Vector2( -500, 0 )
region_enabled = true
region_rect = Rect2( 341, 1, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Z Index" ]

[node name="Fire3" type="Sprite" parent="cameraControl" index="8"]

position = Vector2( 35, 994 )
scale = Vector2( 38.9375, 4.5 )
z_index = 3
texture = ExtResource( 3 )
offset = Vector2( 0, -300 )
region_enabled = true
region_rect = Rect2( 341, 1, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Z Index" ]

[node name="Fire4" type="Sprite" parent="cameraControl" index="9"]

position = Vector2( 34, -745.5 )
scale = Vector2( 39, 3.625 )
z_index = 3
texture = ExtResource( 3 )
offset = Vector2( 0, 300 )
region_enabled = true
region_rect = Rect2( 341, 1, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Z Index" ]

[node name="TileMap" type="TileMap" parent="." index="1"]

position = Vector2( -57.0967, 0 )
mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 0
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -524302, 0, 0, -524301, 0, 0, -524300, 0, 0, -524299, 0, 0, -524298, 0, 0, -524297, 0, 0, -524296, 0, 0, -524295, 0, 0, -524294, 0, 0, -524293, 0, 0, -524292, 0, 0, -524291, 0, 0, -524290, 0, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -589819, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 0, 0, -589815, 0, 0, -589814, 0, 0, -589813, 0, 0, -589812, 0, 0, -589811, 0, 0, -589810, 0, 0, -589809, 0, 0, -589808, 0, 0, -589807, 0, 0, -589806, 0, 0, -589805, 0, 0, -589804, 0, 0, -589803, 0, 0, -589802, 0, 0, -589801, 0, 0, -589800, 0, 0, -589799, 0, 0, -589798, 0, 0, -589797, 0, 0, -589796, 0, 0, -589795, 0, 0, -589794, 0, 0, -589793, 0, 0, -589792, 0, 0, -589791, 0, 0, -589790, 0, 0, -589789, 0, 0, -589788, 0, 0, -589787, 0, 0, -589786, 0, 0, -589785, 0, 0, -458766, 5, 0, -524265, 3, 0, -524249, 0, 0, -393230, 5, 0, -458729, 3, 0, -458713, 0, 0, -327694, 5, 0, -393193, 3, 0, -393177, 0, 0, -262158, 5, 0, -327657, 3, 0, -327641, 0, 0, -196622, 5, 0, -262128, 0, 0, -262127, 0, 0, -262125, 0, 0, -262124, 0, 0, -262123, 0, 0, -262122, 0, 0, -262121, 3, 0, -262105, 0, 0, -131086, 5, 0, -196585, 3, 0, -196569, 0, 0, -65550, 5, 0, -131049, 3, 0, -131033, 0, 0, -14, 5, 0, -65513, 3, 0, -65497, 0, 0, 65522, 5, 0, 23, 3, 0, 39, 0, 0, 131058, 5, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 3, 0, 65575, 0, 0, 196594, 5, 0, 196606, 1, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 2, 0, 131095, 3, 0, 131111, 0, 0, 262130, 5, 0, 196631, 3, 0, 196647, 0, 0, 327666, 5, 0, 262167, 3, 0, 262183, 0, 0, 393202, 5, 0, 327687, 1, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 2, 0, 327703, 3, 0, 327719, 0, 0, 458738, 5, 0, 393239, 3, 0, 393255, 0, 0, 524274, 5, 0, 458775, 3, 0, 458791, 0, 0, 589810, 5, 0, 589811, 0, 0, 589812, 0, 0, 589813, 0, 0, 589814, 0, 0, 589815, 0, 0, 589816, 0, 0, 589817, 0, 0, 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0, 524327, 0, 0 )
_sections_unfolded = [ "Collision" ]

[node name="Snake1" type="KinematicBody2D" parent="." index="2" groups=[
"snakes",
]]

light_mask = 4
input_pickable = false
collision_layer = 4
collision_mask = 6
collision/safe_margin = 0.08
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
leftInput = "snake_1_move_left"
rightInput = "snake_1_move_right"
upInput = "snake_1_move_up"

[node name="Sprite" type="Sprite" parent="Snake1" index="0"]

z_index = 1
texture = ExtResource( 6 )
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake1" index="1"]

modulate = Color( 0.174957, 0.246142, 0.710938, 1 )
self_modulate = Color( 0.121185, 0.539404, 0.816406, 1 )
position = Vector2( -3, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="EnemyCollisionCheck" type="Area2D" parent="Snake1" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 9
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake1/EnemyCollisionCheck" index="0"]

position = Vector2( -3, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Snake2" type="KinematicBody2D" parent="." index="3" groups=[
"snakes",
]]

editor/display_folded = true
light_mask = 4
position = Vector2( -64, 0 )
input_pickable = false
collision_layer = 4
collision_mask = 6
collision/safe_margin = 0.08
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Transform" ]
leftInput = "snake_2_move_left"
rightInput = "snake_2_move_right"
upInput = "snake_2_move_up"

[node name="Sprite" type="Sprite" parent="Snake2" index="0"]

z_index = 1
texture = ExtResource( 6 )
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake2" index="1"]

modulate = Color( 0.174957, 0.246142, 0.710938, 1 )
self_modulate = Color( 0.121185, 0.539404, 0.816406, 1 )
position = Vector2( -3, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="EnemyCollisionCheck" type="Area2D" parent="Snake2" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 9
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake2/EnemyCollisionCheck" index="0"]

position = Vector2( -3, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Snake3" type="KinematicBody2D" parent="." index="4" groups=[
"snakes",
]]

editor/display_folded = true
light_mask = 4
position = Vector2( 0, -64 )
input_pickable = false
collision_layer = 4
collision_mask = 6
collision/safe_margin = 0.08
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
leftInput = "snake_3_move_left"
rightInput = "snake_3_move_right"
upInput = "snake_3_move_up"

[node name="Sprite" type="Sprite" parent="Snake3" index="0"]

z_index = 1
texture = ExtResource( 6 )
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake3" index="1"]

modulate = Color( 0.174957, 0.246142, 0.710938, 1 )
self_modulate = Color( 0.121185, 0.539404, 0.816406, 1 )
position = Vector2( -3, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="EnemyCollisionCheck" type="Area2D" parent="Snake3" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 9
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake3/EnemyCollisionCheck" index="0"]

position = Vector2( -3, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Bird1" type="KinematicBody2D" parent="." index="5"]

editor/display_folded = true
light_mask = 4
position = Vector2( 199, -27 )
input_pickable = false
collision_layer = 8
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 8 )
_sections_unfolded = [ "Collision", "Visibility", "collision" ]

[node name="Sprite" type="Sprite" parent="Bird1" index="0"]

light_mask = 4
rotation = 1.5708
z_index = 1
texture = ExtResource( 9 )
offset = Vector2( -1, -2 )
_sections_unfolded = [ "Animation", "Offset", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird1" index="1"]

shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="Bird1" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bird1/Area2D" index="0"]

shape = SubResource( 3 )

[connection signal="area_entered" from="cameraControl/TopArea" to="Bird1" method="_on_TopArea_area_entered"]

[connection signal="area_entered" from="cameraControl/BotArea" to="Bird1" method="_on_BotArea_area_entered"]

[connection signal="area_entered" from="cameraControl/RightArea" to="Bird1" method="_on_RightArea_area_entered"]

[connection signal="area_entered" from="cameraControl/LeftArea" to="Bird1" method="_on_LeftArea_area_entered"]

[connection signal="area_entered" from="Snake1/EnemyCollisionCheck" to="Snake1" method="_on_EnemyCollisionCheck_area_entered"]

[connection signal="area_entered" from="Snake2/EnemyCollisionCheck" to="Snake2" method="_on_EnemyCollisionCheck_area_entered"]

[connection signal="area_entered" from="Snake3/EnemyCollisionCheck" to="Snake3" method="_on_EnemyCollisionCheck_area_entered"]


